# ClipTrack

./: CMakeLists.txt  CMakeUserPresets.json  CREDITS.txt  ClipTrack.cpp  ClipTrack.rc  ClipTrack.ui  README.md  main.cpp  main.h  resource.h  resources.qrc
